--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 
 <h1>Welcome to 71 Talk</h1>
 <a href="https://discord.com/">Mid Journey Via Discord </a><br>
-<a href="https://chat.openai.com/">Chat GPT </a>
+<a href="https://test-3zjzuy27a-pandakokolit.vercel.app/">Chat GPT </a>
 </body>
 </html>
