--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <body>
 
 <h1>Welcome to 71 Talk</h1>
-<a href="https://discord.com/">Mid Journey Via Discord </a><br>
-<a href="https://test-3zjzuy27a-pandakokolit.vercel.app/">Chat GPT </a>
+<iframe src="https://chat.openai.com/" width="50%" height="500px"></iframe>
 </body>
 </html>
